<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/sel_navi_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/town_fragment"
        android:icon="@drawable/sel_navi_town"
        android:title="@string/menu_town" />
    <item
        android:id="@+id/nearby_fragment"
        android:icon="@drawable/sel_navi_nearby"
        android:title="@string/menu_nearby" />
    <item
        android:id="@+id/chat_fragment"
        android:icon="@drawable/sel_navi_chat"
        android:title="@string/menu_chat" />
    <item
        android:id="@+id/my_info_fragment"
        android:icon="@drawable/sel_navi_my_info"
        android:title="@string/menu_my_info" />
</menu>